Implementado funções de editar e excluir script para campo datetime.

--- a/templates/tarefas/tarefa_form.html
+++ b/templates/tarefas/tarefa_form.html
@@ -2,15 +2,33 @@
 {% load crispy_forms_tags %}
 
 {% block page_title %}
-    Nova Tarefa
+{% if tarefa.pk %}
+Editar Tarefa
+{% else %}
+Nova Tarefa
+{% endif %}
 {% endblock page_title %}
 
 {% block content %}
+{% if tarefa.pk %}
+    <h1>Editar Tarefa</h1>
+{% else %}
     <h1>Nova Tarefa</h1>
+{% endif %}
 
-    <form method="POST">
-        {% csrf_token %}
-        {{ form|crispy }}
-        <button type="submit" class="btn btn-primary">Salvar</button>
-    </form>
+<form method="POST">
+    {% csrf_token %}
+    {{ form|crispy }}
+    <button type="submit" class="btn btn-primary">Salvar</button>
+</form>
+
+<script>
+    // Se o campo tiver o nome "data_final", troca o tipo pra "datetime-local"
+    document.addEventListener('DOMContentLoaded', function () {
+        const campoData = document.getElementById('id_data_final');
+        if (campoData) {
+            campoData.type = 'datetime-local'; // ou 'date' se quiser só a data
+        }
+    });
+</script>
 {% endblock content %}
